# TeberianOS

./: Installed  Perl Modules  R Packages  README.md
ALSA-Library-1.2.3.2/: log
APR-Util-1.6.1/: log
Abseil-C++/: log
Alex/: log
Angband/: log
Ant/: lib
Apache-2.4.46/: log
Aspell-0.60.8/: log
Aspell-en-6.0-0/: log
Autoconf-2.13/: 02162021  02162021-2  log
Automake/: 02162021  02282021
Avahi/: install
Awesome-Finder/: log
BIND-Utilities-9.16.5/: log
Boom/: log
Boost/: log
Brotli-1.0.7/: log
CMake-3.18.1/: log
Cairo-1.17.2/: log
Cairomm-1.12.2/: log
Carbon-Now-CLI/: log
Cash-CLI/: log
Chapel/: log
Chuck/: log
Climate/: log
Clutter-1.26.4/: log
Clutter-GST-3.0.27/: log
Cogl-1.22.8/: log
Compface-1.5.2/: log
Cracklib-2.9.7/: log
CurseRadio/: log
Cython-0.29.21/: log
D-Bus-1.12.20/: log  log2
DBus-GLib-0.110/: log
DConf-0.36.0/: log
DHCP-4.4.2/: log
DNSTwist/: log
DOxygen-1.8.19/: log
Dash-0.5.11.2/: log
DocBook-3.1-DTD/: log
DocBook-4.5-SGML-DTD/: log
DocBook-DSSSL-1.79/: log
DocBook-Utils-0.6.14/: log
DocBook-XML-4.5/: log  log2
DocBook-XML-5.0/: log
DocBook-XML-5.1/: log
DocBook-XSL-1.79.2/: log
DocBook-XSL-Nons-1.79.2/: log
Double-Conversion-3.1.5/: log
Dovecot/: log
DoxTracker/: log
DoxingFrameWork/: log
Edward2/: log
Elixir/: log
Emacs/: log
Empty-Trash-CLI/: log
Enterprise/: log
Erlang/: log
Eureka/: log
Eve/: log
FBX/: log
teberianos/: Cargo.toml  x86_64-teberianos.json
teberianos/.cargo/: config.toml
teberianos/src/: main.rs  vga_buffer.rs
(+394 files in other folders)
