[package]
name = "teberianos"
version = "0.1.0"
authors = ["danielteberian <danielteberian@github.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


#cargo build
[profile.dev]
panic = "abort"

#cargo build --release
[profile.release]
#panic = "abort"
